# workflow-engine

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: labels.yml  repos.yml  repos.yml.example
docs/: ARCHITECTURE.md  CUSTOMIZATION.md  DISTRIBUTION_OPTIONS.md  E2E_TEST_HANDOVER.md  PHASE_B_C_SPECIFICATION.md  SETUP_GUIDE.md  TROUBLESHOOTING.md  開発選択肢
examples/todo-demo/: README.md
orchestrator/: __init__.py  human_loop.py  intervention.py  main.py  monitor.py
planner-agent/: __init__.py  main.py
reviewer-agent/: __init__.py  main.py
scripts/: health_check.py  launch.ps1  launch.py  launch.sh  setup-repository.sh  status.py  stop.ps1  stop.sh  version.py
shared/: __init__.py  action_pack.py  config.py  console.py  git_operations.py  github_client.py  llm_client.py  lock.py  policy_client.py  policy_store.py  workspace.py
tasks/: lessons.md  todo.md
templates/: AGENTS.md
templates/github/: PULL_REQUEST_TEMPLATE.md
templates/github/ISSUE_TEMPLATE/: feature-request.md
tests/: __init__.py  conftest.py  test_action_pack.py  test_cli.py  test_config.py  test_console.py  test_git_operations.py  test_github_client.py  test_issue_11.py  test_issue_15.py  test_issue_16.py  test_issue_28.py  test_issue_29.py  test_issue_31.py  test_issue_32.py  test_issue_33.py  test_issue_35.py  test_issue_46.py  test_issue_63.py  test_issue_64.py  test_llm_client.py  test_lock.py  test_lock_manager.py  test_orchestrator_human_loop.py  test_orchestrator_intervention.py  test_orchestrator_monitor.py  test_planner.py  test_planner_approval_loop.py  test_planner_policy.py  test_policy_client.py  test_policy_metrics.py  test_policy_store.py  test_reviewer.py  test_reviewer_agent.py  test_reviewer_policy.py  test_status_script.py  test_worker.py  test_worker_agent_stale_locks.py  test_worker_retry.py  test_workspace.py
worker-agent/: __init__.py  git_operations.py  main.py
workflow_engine/: __init__.py  cli.py  worker_common.py  worker_issue_flow.py  worker_retry_flow.py
