[build-system]
requires = ["hatchling>=1.20"]
build-backend = "hatchling.build"

[project]
name = "workflow-engine"
version = "0.1.0"
description = "AI-powered autonomous development workflow engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "rich>=14.3.1",
]

[project.scripts]
workflow-engine = "workflow_engine.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"planner-agent/**/*.py" = ["E402", "N999"]
"reviewer-agent/**/*.py" = ["E402", "N999"]
"worker-agent/**/*.py" = ["E402", "N999"]
"tests/**/*.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
exclude = ["scripts/", "planner-agent/", "worker-agent/", "reviewer-agent/", "tests/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
ignore_missing_imports = true
warn_unused_ignores = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["workflow_engine", "shared"]
include = [
    "planner-agent/**",
    "worker-agent/**",
    "reviewer-agent/**",
    "config/**",
    "README.md",
]

[dependency-groups]
dev = [
    "types-pyyaml>=6.0.12.20250915",
]
